# otus-c-2022-09

./: .gitignore  README.md
hw1/: CMakeCache.txt  CMakeLists.txt  main.c  readme.md
hw1/test/: text
hw10/: Makefile  crc32.c  crc32.h  main.c  readme.md
hw11/: CMakeLists.txt  readme.md
hw11/parselogs/: CMakeLists.txt  main.c
hw12/: CMakeLists.txt  readme.md
hw12/src/: CMakeLists.txt  buffer.c  buffer.h  main.c
hw13/: CMakeLists.txt  readme.md
hw13/fileserver/: CMakeLists.txt  buffer.c  buffer.h  connection.c  connection.h  main.c  signal_helpers.c  signal_helpers.h  sock_helpers.c
hw13/sflog/: CMakeLists.txt  sflog.c  sflog.h
hw14/: CMakeLists.txt  main.c  readme.md
hw15/: CMakeLists.txt  cube.c  readme.md
hw2/: .gitignore  CMakeLists.txt  conv.py  main.c  readme.md
hw3/: CMakeLists.txt  readme.md
hw3/maplib/: CMakeLists.txt  maplib.h
hw3/maplib/impl/: map_str_int.h  map_str_int_types.h  maplib.c
hw3/wordcount/: CMakeLists.txt  hash.c  hash.h  main.c
hw4/: .gitignore  Makefile  Makefile.json  readme.md
hw4/src/: main.c  parser.c  parser.h
hw5/: CMakeLists.txt  gstmyelement.c  gstmyelement.h  readme.md
hw5/sflog/: CMakeLists.txt
hw5/test/: run.sh
hw6/: CMakeLists.txt  readme.md
hw6/sflog/: sflog.c  sflog.h
hw6/test/: CMakeLists.txt  main.c
hw7/: Makefile  main.asm  readme.md  reverse  reverse.c
hw8/: my_patch.diff
hw8/clib/src/common/: clib-package.c
hw9/: Makefile  readme.md
hw9/src/: demonize.c  demonize.h  main.c  mydaemon.ini  single_process.c  single_process.h
logger/: CMakeLists.txt  readme.md
logger/examples/: CMakeLists.txt  mt.c  simple.cpp
logger/tests/: CMakeLists.txt  page.html  simple.cpp  test_cq.cpp
logger/troll/: CMakeLists.txt  buffer.c  buffer.h  cache_printf_args.c  connection.c  connection.h  cqueue.c  cqueue.h  dprint.h  html.h  logmsg.c  logmsg.h  sock_helpers.c  sock_helpers.h  troll.c  troll.h  troll_reg_level.h
